tests/ui/impl-trait/alias-liveness/rpit-hidden-erased-unsoundness.stderr
error[E0700]: hidden type for `impl Sized + 'a` captures lifetime that does not appear in bounds
  --> $DIR/rpit-hidden-erased-unsoundness.rs:16:5
   |
LL | fn step2<'a, 'b: 'a>() -> impl Sized + 'a {
   |              --           --------------- opaque type defined here
   |              |
   |              hidden type `impl Captures<'b> + 'a` captures the lifetime `'b` as defined here
LL |     step1::<'a, 'b>()
   |     ^^^^^^^^^^^^^^^^^
   |
help: to declare that `impl Sized + 'a` captures `'b`, you can add an explicit `'b` lifetime bound
   |
LL | fn step2<'a, 'b: 'a>() -> impl Sized + 'a + 'b {
   |                                           ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0700`.
